--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crud",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon server.js"
   },
@@ -11,11 +11,10 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.4",
     "openapi-comment-parser": "^1.0.0",
-    "swagger-ui-express": "^4.5.0"
-  },
-  "devDependencies": {
+    "swagger-ui-express": "^4.5.0",
     "nodemon": "^2.0.19"
   },
+  "devDependencies": {},
   "type": "module",
   "author": "",
   "license": "ISC"
